Class initialization checks assert when holder klass is in error state

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • 13
    • Affects Version/s: 13
    • Component/s: hotspot
    • b25

        # Internal Error (open/src/hotspot/share/opto/parse1.cpp:2116), pid=27931, tid=27971
        # assert(method()->holder()->is_being_initialized() || method()->holder()->is_initialized()) failed: initialization should have been started

        Current CompileTask:
        C2:1373109 220250 b javasoft.sqe.tests.vm.constantpool.Initialization.Initialization010.Initialization01001m054.Initialization01001m054::method (1 bytes)

        Stack: [0x00007efd5bbfc000,0x00007efd5bcfd000], sp=0x00007efd5bcf9c10, free space=1015k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x142d33e] Parse::clinit_deopt()+0x12e
        V [libjvm.so+0x1434dd4] Parse::Parse(JVMState*, ciMethod*, float)+0xdd4
        V [libjvm.so+0x800e2c] ParseGenerator::generate(JVMState*)+0x18c
        V [libjvm.so+0x9bdf14] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0xf54
        V [libjvm.so+0x7feecd] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
        V [libjvm.so+0x9ca90d] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x46d
        V [libjvm.so+0x9cb908] CompileBroker::compiler_thread_loop()+0x3b8
        V [libjvm.so+0x16bd5da] JavaThread::thread_main_inner()+0x26a
        V [libjvm.so+0x16c5b87] JavaThread::run()+0x227
        V [libjvm.so+0x16c2cb6] Thread::call_run()+0xf6
        V [libjvm.so+0x13e0efe] thread_native_entry(Thread*)+0x10e

              Assignee:
              Vladimir Ivanov
              Reporter:
              Vladimir Ivanov
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: