8225106: C2: Parse::clinit_deopt asserts when holder klass is in error state

Reviewed-by: mdoerr